Fix T56418: Changing to Solid View crashes Blender

Everything seems to behave like it should when drawdata is alloced
on instances.